@@ -32,6 +32,7 @@ cafe.Events: 10
 
 # ---------------------------  bookkeeping ---------------
 JobBookeeping.DerivationTag: %{Global.DerivationTag}
+JobBookeeping.IsData: %{Global.IsData}
 
 # ---------------------------  data/MC specific processors ---------------
 datamc.Select: IsData(isdata)
