@@ -29,6 +29,7 @@ cafe.Events: 2
 
 # ---------------------------  bookkeeping ---------------
 JobBookeeping.DerivationTag: %{Global.DerivationTag}
+JobBookeeping.IsData: %{Global.IsData}
 
 # ---------------------------  data/MC specific processors ---------------
 datamc.Select: IsData(isdata)
