@@ -36,6 +36,7 @@ isdata.Enforce: TRUE
 
 # ---------------------------  bookkeeping ---------------
 JobBookeeping.DerivationTag: %{Global.DerivationTag}
+JobBookeeping.IsData: %{Global.IsData}
 
 # ---------------------------  Vetos based on MC truth -----------------
 mcveto.Period: %{Global.Period}
